--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev:server": "tsc-watch --onSuccess \"node ./dist/app.js\""
+    "dev:server": "tsc-watch --onSuccess \"node ./dist/app.js\"",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.2",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.5.3"
   },
